--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,8 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-
-# Production builds
-build/
-dist/
+package-lock.json
+yarn.lock
 
 # Environment variables
 .env
@@ -16,25 +13,10 @@ dist/
 .env.test.local
 .env.production.local
 
-# IDE and editor files
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-# Logs
-logs
-*.log
+# Production build
+build/
+dist/
+out/
 
 # Runtime data
 pids
@@ -49,8 +31,23 @@ coverage/
 # nyc test coverage
 .nyc_output
 
+# Grunt intermediate storage
+.grunt
+
+# Bower dependency directory
+bower_components
+
+# node-waf configuration
+.lock-wscript
+
+# Compiled binary addons
+build/Release
+
 # Dependency directories
 jspm_packages/
+
+# TypeScript cache
+*.tsbuildinfo
 
 # Optional npm cache directory
 .npm
@@ -73,7 +70,10 @@ jspm_packages/
 # Yarn Integrity file
 .yarn-integrity
 
-# parcel-bundler cache (https://parceljs.org/)
+# dotenv environment variables file
+.env.test
+
+# parcel-bundler cache
 .cache
 .parcel-cache
 
@@ -82,6 +82,7 @@ jspm_packages/
 
 # Nuxt.js build / generate output
 .nuxt
+dist
 
 # Gatsby files
 .cache/
@@ -93,4 +94,43 @@ public
 
 # Temporary folders
 tmp/
-temp/ 
+temp/
+
+# IDEs and editors
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs
+logs
+*.log
+
+# Database
+*.sqlite
+*.db
+
+# Server uploads
+uploads/
+
+# Testing
+/coverage
+
+# Production
+/build
+
+# Local development
+.local
+
+# Webpack
+.webpack/ 
