--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "nsw-dui-defense-server",
+  "name": "nsw-dui-server",
   "version": "1.0.0",
-  "description": "Backend API for NSW DUI Defense Navigator",
+  "description": "Backend API for NSW DUI Defense Platform",
   "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "migrate": "node scripts/migrate.js",
-    "seed": "node scripts/seed.js"
+    "test": "jest"
   },
   "keywords": ["api", "legal", "dui", "nsw", "defense"],
   "author": "NSW DUI Defense Navigator Team",
@@ -23,23 +20,14 @@
     "jsonwebtoken": "^9.0.1",
     "stripe": "^12.12.0",
     "nodemailer": "^6.9.4",
-    "puppeteer": "^20.7.2",
     "dotenv": "^16.3.1",
     "express-rate-limit": "^6.8.1",
-    "express-validator": "^7.0.1",
-    "winston": "^3.10.0",
-    "compression": "^1.7.4",
-    "morgan": "^1.10.0",
-    "joi": "^17.9.2",
-    "multer": "^1.4.5-lts.1",
-    "redis": "^4.6.7",
-    "openai": "^3.3.0"
+    "express-validator": "^7.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
-    "jest": "^29.6.1",
-    "supertest": "^6.3.3",
-    "@types/jest": "^29.5.3"
+    "jest": "^29.6.2",
+    "supertest": "^6.3.3"
   },
   "engines": {
     "node": ">=16.0.0"
