--- a/server/package.json
+++ b/server/package.json
@@ -8,28 +8,36 @@
     "dev": "nodemon src/app.js",
     "test": "jest"
   },
-  "keywords": ["api", "legal", "dui", "nsw", "defense"],
+  "keywords": [
+    "api",
+    "legal",
+    "dui",
+    "nsw",
+    "defense"
+  ],
   "author": "NSW DUI Defense Navigator Team",
   "license": "PROPRIETARY",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "mongoose": "^7.4.0",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.1",
-    "stripe": "^12.12.0",
-    "nodemailer": "^6.9.4",
+    "compression": "^1.8.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^6.8.1",
-    "express-validator": "^7.0.1"
+    "express-validator": "^7.0.1",
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.4.0",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.9.4",
+    "stripe": "^12.12.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
     "jest": "^29.6.2",
+    "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
   },
   "engines": {
     "node": ">=16.0.0"
   }
-} 
+}
