--- a/server/package.json
+++ b/server/package.json
@@ -1,43 +1,40 @@
 {
-  "name": "nsw-dui-server",
+  "name": "dui-defense-server",
   "version": "1.0.0",
-  "description": "Backend API for NSW DUI Defense Platform",
+  "description": "Backend server for NSW DUI Defense Navigator",
   "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint src/",
+    "lint:fix": "eslint src/ --fix"
   },
   "keywords": [
-    "api",
-    "legal",
     "dui",
+    "defense",
+    "legal",
     "nsw",
-    "defense"
+    "australia"
   ],
-  "author": "NSW DUI Defense Navigator Team",
-  "license": "PROPRIETARY",
+  "author": "Your Name",
+  "license": "MIT",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "compression": "^1.8.0",
+    "@anthropic-ai/sdk": "^0.24.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-rate-limit": "^6.8.1",
-    "express-validator": "^7.0.1",
-    "helmet": "^7.0.0",
-    "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.4.0",
-    "morgan": "^1.10.0",
-    "nodemailer": "^6.9.4",
-    "stripe": "^12.12.0"
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "mongoose": "^8.0.3"
   },
   "devDependencies": {
-    "jest": "^29.6.2",
-    "nodemon": "^3.0.1",
-    "supertest": "^6.3.3"
+    "eslint": "^8.55.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
   }
 }
