--- a/server/package.json
+++ b/server/package.json
@@ -1,14 +1,13 @@
 {
   "name": "dui-defense-server",
   "version": "1.0.0",
-  "description": "Backend server for NSW DUI Defense Navigator",
+  "description": "Backend server for NSW DUI Defense Platform",
   "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
-    "test": "jest",
-    "lint": "eslint src/",
-    "lint:fix": "eslint src/ --fix"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "vercel-build": "echo 'Server build complete'"
   },
   "keywords": [
     "dui",
@@ -17,24 +16,24 @@
     "nsw",
     "australia"
   ],
-  "author": "Your Name",
+  "author": "NSW DUI Defense Platform",
   "license": "MIT",
   "dependencies": {
     "@anthropic-ai/sdk": "^0.24.3",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-rate-limit": "^7.1.5",
-    "helmet": "^7.1.0",
-    "mongoose": "^8.0.3"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-rate-limit": "^7.4.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.5.1",
+    "morgan": "^1.10.0",
+    "helmet": "^7.1.0"
   },
   "devDependencies": {
-    "eslint": "^8.55.0",
-    "jest": "^29.7.0",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.1.4"
   },
   "engines": {
-    "node": ">=16.0.0",
-    "npm": ">=8.0.0"
+    "node": ">=18.0.0"
   }
 }
